# senba-cache

./: .gitignore  .gitmodules  .skyignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: micro.rs  sieve_cache_perf.rs
docs/: api-comparison-concurrent.md  api-comparison.md  benchmarking.md  improvement-ideas.md  sieve-paper-workload.md
docs/benchmark/c17s-shard-sweep/: plot_c8x.py  run.sh
docs/benchmark/concurrent-full-sweep/: plot.py  run.sh
docs/benchmark/cseries-string-baseline/: plot.py  run.sh  summary.md
docs/benchmark/lru-vs-minimoka-vs-senba-pareto/: README.md  plot.py  run.sh
docs/benchmark/partitioned-cap1024-sweep/: plot.py  run.sh
docs/benchmark/partitioned-sweep/: README.md  plot.py  run.sh.archived
docs/benchmark/partitioned-vtune/: README.md
docs/benchmark/r1-sweep/: README.md  plot.py  run.sh
docs/benchmark/r1-vs-moka-cap-sweep/: plot.py  (+1 more)
docs/reports/: 2026-05-03-bench-harness-design.md  2026-05-03-realistic-workload-bench.md  2026-05-03-sieve-v0-divergence.md  2026-05-03-sieve-v3-bench.md  2026-05-03-sieve-v3-profile.md  2026-05-04-improvement-ideas.md  2026-05-04-jedi-vs-orig.md  2026-05-04-sieve-j3-bench.md  2026-05-04-sieve-orig-overhead-analysis.md  2026-05-05-j5-pershard-pareto.md  2026-05-05-j5-twitter-pareto.md  2026-05-05-j5-vs-orig-2x-memfair.md  2026-05-05-j7-twitter-pareto.md  2026-05-05-j8-design.md  2026-05-05-sieve-j4-crossover-and-shard-sweep.md  2026-05-05-sieve-j4-pershard-vs-footprint.md  2026-05-05-sieve-j4-set-associative.md  2026-05-05-sieve-j5-doublehash-ab.md  2026-05-05-sieve-j6-m21-twitter.md  2026-05-05-sieve-j7-m23-twitter.md  2026-05-05-sieve-j8-bench.md  2026-05-05-sieve-j8-design.md  2026-05-06-api-comparison-moka-lru.md  2026-05-06-c8-design.md  2026-05-06-c8-vs-moka-thread-sweep.md  2026-05-06-j8-c-hoist.md  2026-05-06-j8-candidate-loop-analysis.md  2026-05-06-j8-twitter-pareto.md  2026-05-06-j8-vs-mini-moka-twitter.md  2026-05-06-senba-sievecache-design.md  2026-05-06-senba-twitter-string-sweep.md  2026-05-06-sieve-c-vs-senba-twitter52-design.md  2026-05-06-sieve-c-vs-senba-twitter52.md  2026-05-06-sieve-cache-shift-on-evict.md  2026-05-06-st-twitter-5cluster.md  2026-05-06-twitter-string-keys.md  2026-05-07-aligned-tags-load.md  2026-05-07-inline-design-cache-vs-inner.md  2026-05-08-c10s-vs-c8-baseline.md  2026-05-08-c11s-conditional-set.md  (+56 more)
profiles/: c15s_hr_2026-05-10.csv  c15s_phase1_2026-05-10.csv  j3_bench_2026-05-04.json  j3_bench_2026-05-04_after_fix.json  j4_capsweep_2026-05-05.csv  j4_capsweep_n8_2026-05-05.csv  j4_hitratio_2026-05-05.csv  j4_pershard_isolation_2026-05-05.csv  j4_shardsweep_2026-05-05.csv  j4_smalltotal_shardsweep_2026-05-05.csv  j5_doublehash_ab_2026-05-05.csv  j5_pershard_pareto_2026-05-05.csv  j5_twitter_pareto_2026-05-05.csv  j6_twitter_pareto_2026-05-05.csv  j7_twitter_full_2026-05-05.csv  j7_twitter_pareto_2026-05-05.csv  j8_pershard_sweep_2026-05-06-after-blsr-layout.csv  j8_pershard_sweep_2026-05-06-after-c.csv  j8_pershard_sweep_2026-05-06.csv  j8_twitter_full_2026-05-06.csv  j8_twitter_pareto_2026-05-05.csv  minimoka_twitter_2026-05-06.csv  moka_extended_2026-05-06.csv  orig_skew0.6_cap100.json  orig_skew1_cap10000.json  orig_worst.json  senba_twitter_pareto_2026-05-06.csv  senba_twitter_string_2026-05-06.csv  senba_twitter_string_2026-05-07.csv  st_twitter_5cluster_2026-05-06.csv  v0_worst.json  v1_skew1_cap10000.json  v2_skew0.6_cap100.json  v2_skew1_cap10000.json  v2_worst.json  v3_skew0.6_cap100.json  v3_skew1_cap10000.json
research/: Cargo.toml
research/benches/: micro.rs  sieve_cache_perf.rs  sieve_concurrent_perf.rs
research/src/: lib.rs  single_shard.rs
research/src/experimental/: concurrent_test_suite.rs  mod.rs  routing_hint.rs  sieve_c10s.rs  sieve_c11s.rs  sieve_c12s.rs  sieve_c13s.rs  sieve_c14s.rs  sieve_c15s.rs  sieve_c16s.rs  sieve_c17s.rs  sieve_c18s.rs  sieve_c8.rs  sieve_c9.rs  sieve_j3.rs  sieve_j4.rs  sieve_j5.rs  sieve_j6.rs  sieve_j7.rs  sieve_j8.rs  sieve_orig.rs  sieve_r1.rs  sieve_r2h.rs  sieve_r3.rs  sieve_r4.rs  sieve_v0.rs  sieve_v1.rs  sieve_v2.rs  sieve_v3.rs  tls_id.rs
research/src/workload/: arc_preset.rs  file.rs  mod.rs  zipf.rs
research/tests/: oracle.rs  oracle_cache_match.rs  oracle_concurrent_cache_match.rs
scripts/: bump-version.sh  criterion_compare.py  plot_c11s_sweep.py  plot_c12s_sweep.py  plot_c13s_sweep.py  plot_c15s_phase1.py  plot_c8_vs_c9.py  plot_c_vs_senba_twitter52.py  plot_j3.py  plot_j4.py  plot_j5_twitter.py  plot_j7_twitter.py  plot_j8_twitter.py  plot_minimoka_twitter.py  plot_moka_extended.py  plot_pareto.py  plot_senba_twitter_pershard64_vs_orig.py  plot_senba_twitter_string.py  plot_single_shard_baseline.py  plot_st_twitter_5cluster.py  plot_summary_grid.py  plot_summary_grid_with_orig.py  pyproject.toml  samply_lines.py  samply_phases.py  samply_top.py  sweep_c15s_phase1.sh  sweep_c8_vs_c9.sh  sweep_j5_pershard.sh  sweep_j5_twitter.sh  sweep_j6_twitter.sh  sweep_j7_twitter.sh  sweep_j7_twitter_full.sh  sweep_j8_pershard.sh  sweep_j8_twitter.sh  sweep_j8_twitter_full.sh  sweep_minimoka_twitter.sh  sweep_moka_extended.sh  sweep_senba_twitter_string.sh  sweep_single_shard_baseline.sh  (+5 more)
src/: cache.rs  concurrent.rs  error.rs  hash.rs  inner.rs  iter.rs  lib.rs  shard.rs  sieve_c8.rs  sieve_cache.rs  sieve_j3.rs  sieve_j4.rs  sieve_j5.rs  sieve_j6.rs  sieve_j7.rs  sieve_j8.rs  sieve_orig.rs  sieve_v0.rs  sieve_v1.rs  sieve_v2.rs  sieve_v3.rs  slot.rs
src/concurrent/: cache.rs  mod.rs
src/experimental/: mod.rs  sieve_c8.rs  sieve_j3.rs  sieve_j4.rs  sieve_j5.rs  sieve_j6.rs  sieve_j7.rs  sieve_j8.rs  sieve_orig.rs  sieve_v0.rs  sieve_v1.rs  sieve_v2.rs  sieve_v3.rs
src/shard/: lookup.rs  mod.rs  scan.rs  state.rs
src/sieve_cache/: inner.rs  iter.rs  mod.rs  stats.rs  tests.rs
src/tests/: cache.rs  clear.rs  clone_debug.rs  construction.rs  eviction.rs  extend.rs  get_or_insert.rs  insert_get.rs  layout.rs  mod.rs  peek.rs  remove.rs  retain.rs  slot.rs  slot_sizes.rs
src/workload/: file.rs  zipf.rs
tests/: oracle.rs
(+97 files in other folders)
