[workspace]
members = [".", "research"]
resolver = "2"

[package]
name = "senba"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A fast, single-threaded cache using the sharded SIEVE policy."
license = "MIT"
readme = "README.md"
repository = "https://github.com/saka1/senba-cache"
keywords = ["cache", "sieve", "lru", "in-memory"]
categories = ["caching", "data-structures"]
# senba lives at the workspace root, so the package directory contains the
# whole repo tree (`research/`, `external/`, `docs/`, etc.). Allowlist what
# actually ships to crates.io — the publishable surface (crate-root files +
# unit tests) plus README and LICENSE.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
# debuginfo so samply / `perf annotate` can map asm back to source lines.
# bench inherits from release, so set it on both profiles.
debug = "line-tables-only"
# Applies to in-workspace builds (incl. perf-gate bench) only; ignored for
# downstream crates.io consumers, where the root crate's profile wins.
lto = "thin"

[profile.bench]
debug = "line-tables-only"
