[package]
name = "senba-research"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
senba = { path = ".." }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Zipf generator (workload module).
rand = "0.10"
rand_distr = "0.6"
# W-TinyLFU 比較用 (bench からのみ参照)。moka 本体ではなく mini-moka を選ぶのは
# synchronous + background thread 無しで CPU を奪われない公平条件を作るため。
mini-moka = "0.10"
# moka 0.12+ は adaptive window sizing が入っており、scan-heavy で window を広げる。
# mini-moka との比較で「default tuning がボトルネックか / W-TinyLFU 系全般の性質か」を切り分ける。
moka = { version = "0.12", default-features = false, features = ["sync"] }
# c8 (並行 j8) で writer 直列化に使う。std::sync::Mutex より uncontended が速く
# (~12 ns vs ~25 ns)、PoisonError も持たない。read path は lock-free なので
# writer 競合域でだけ効く。
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "micro"
harness = false

# Performance regression bench for the library-grade `senba::Cache`.
# Quality-gate companion to `cargo test`: fast (~10s), narrow scenario
# set, fixed seeds, intended for `--save-baseline` / `--baseline`
# comparison. Lives here because it depends on `senba_research::workload`
# (Zipf), but the contract it gates is `senba::Cache`.
[[bench]]
name = "sieve_cache_perf"
harness = false

[[bin]]
name = "bench"

[[bin]]
name = "bench_concurrent"
