[package]
name = "senba-research"
version = "0.0.0"
edition = "2024"
publish = false

[features]
# Opt-in for tests that read trace files from the `external/NSDI24-SIEVE`
# git submodule. Off by default so `cargo test --workspace` works without
# initializing submodules (CI uses the default-off form). Enable locally
# with `cargo test -p senba-research --features external-traces`.
#
# Also pulls in `zstd` (C dep) for on-the-fly `.zst` decompression of ARC
# paper traces. Default-off keeps the cross-build path C-free, so
# `bench_vtune` etc. can be cross-compiled to Windows without a Windows
# C toolchain.
external-traces = ["dep:zstd"]

[dependencies]
senba = { path = "..", features = ["concurrent"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Zipf generator (workload module).
rand = "0.10"
rand_distr = "0.6"
# W-TinyLFU 比較用 (bench からのみ参照)。moka 本体ではなく mini-moka を選ぶのは
# synchronous + background thread 無しで CPU を奪われない公平条件を作るため。
mini-moka = "0.10"
# moka 0.12+ は adaptive window sizing が入っており、scan-heavy で window を広げる。
# mini-moka との比較で「default tuning がボトルネックか / W-TinyLFU 系全般の性質か」を切り分ける。
moka = { version = "0.12", default-features = false, features = ["sync"] }
# 単スレ pareto baseline 用 LRU 実装 (jeromefroe/lru-rs)。`with_hasher` で
# Xxh3Build を差し替えて hash cost を senba / mini-moka と揃える。
lru = "0.12"
# c8 (並行 j8) で writer 直列化に使う。std::sync::Mutex より uncontended が速く
# (~12 ns vs ~25 ns)、PoisonError も持たない。read path は lock-free なので
# writer 競合域でだけ効く。
parking_lot = "0.12"
# r4 が writer の old K/V drop を defer する。lib (senba::concurrent) と同じ 0.9 系。
crossbeam-epoch = "0.9"
# ARC paper trace ( `external/mokabench/cache-trace/arc/*.lis.zst` ) を bench から
# 直接食わせるため zstd を生やす。decompressed `.lis` も読めるよう拡張子で分岐。
# `external-traces` feature 経由でしか有効化されない (default off) — C 拡張なので
# Windows クロスビルド時に C toolchain を不要にするため optional。
zstd = { version = "0.13", optional = true }
# Intel ITT API — `bench_vtune` から VTune の collection を programmatically
# pause/resume する。VTune が attach していないときは no-op なので Linux ビルド
# も普通に通る。Windows クロスビルドでは ittapi-sys の C ソースを clang-cl で
# コンパイルするので、cargo-xwin + clang-cl 環境が要る (CLAUDE.md 参照)。
ittapi = "0.5"

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "micro"
harness = false

# Performance regression bench for the library-grade `senba::Cache`.
# Quality-gate companion to `cargo test`: fast (~10s), narrow scenario
# set, fixed seeds, intended for `--save-baseline` / `--baseline`
# comparison. Lives here because it depends on `senba_research::workload`
# (Zipf), but the contract it gates is `senba::Cache`.
[[bench]]
name = "sieve_cache_perf"
harness = false

# Companion regression bench for `senba::concurrent::Cache`. Four-cell
# matrix (V ∈ {u64, String} × T ∈ {4, 16}) at cap=4096 / shards=512,
# fixed seeds. Same `--save-baseline` / `--baseline` flow as above; the
# gate it enforces is `src/concurrent/`.
[[bench]]
name = "sieve_concurrent_perf"
harness = false

[[bin]]
name = "bench"

[[bin]]
name = "bench_concurrent"
