[project]
name = "senba-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "skypilot[aws]>=0.7",
]

[tool.uv]
exclude-newer = "1 week"

[dependency-groups]
dev = [
    "pypdf>=6.10.2",
]
